--- a/Html/WhatIsHtml.html
+++ b/Html/WhatIsHtml.html
@@ -57,7 +57,7 @@
     
         <h3> HTML List with different format with Unordered list </h3>
 
-        <ul type="a">
+        <ul type="A">
             <li> A Item </li>
             <li> B Item </li>
             <li> C Item </li>
